# OrbitStart

./: .gitattributes  .gitignore  CHANGELOG_DESIGN.md  DESIGN_UPDATES.md  ORIGINAL_REQUEST.md  PIXSTART_SUCCESSOR_PLAN.md  PROJECT.md  QUICK_START.md  README.md  README_UPGRADE.md  THEME_SPEC.md  design.md  index.html  latest.json  package-lock.json  package.json  playwright.config.ts  vite.config.ts
design/local-galaxy/: USAGE_MAP.md  VISUAL_GUIDE.md
docs/: DND_SORTABLE_DESIGN.md  ENVIRONMENT_NOTES.md  FLOATING_BUBBLE_WINDOW_PLAN.md  OBSIDIAN_INTEGRATION_ASSESSMENT.md  PHASE0_VALIDATION.md  PHASE1_VALIDATION.md  PHASE4_VALIDATION.md  PLUGIN_API.md  PLUGIN_API_ASSESSMENT.md  PLUGIN_DEVELOPMENT.md  RELEASE_0.6.3.md  THEME_DEVELOPMENT.md  TRIPS_PLUGIN_DESIGN.md  USER_FEEDBACK_ANALYSIS.md  workspace_plan.md
orbitstart-video/: article.md  assets-manifest.md  outline.md  script.md  template-selection.md
plugins/: README.md
plugins/hello-command/: README.md  main.ts  orbitstart-plugin-api.d.ts  plugin.json
plugins/obsidian-search/: README.md  main.ts  plugin.json
plugins/trips-search/: README.md  main.ts  orbitstart-plugin-api.d.ts  plugin.json
plugins/workspaces/: main.ts  plugin.json  (+1 more)
registry/: plugins.json  themes.json  update-channel.json
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src-tauri/windows/: nsis-hooks.nsh
tests/: atelier-zero.spec.ts  basic.spec.ts  custom-harness.cjs  plugin-runtime-verify.mjs
themes/: README.md
tools/: package-plugin.ps1
(+24 files in other folders)
